fix: map on mobile

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -158,6 +158,7 @@ body {
   padding-top: 10px;
   display: none;
   position: relative;
+  flex: 1;
 }
 
 .city-col.active {
@@ -258,6 +259,9 @@ body {
   transition: 0.2s;
   color: #ffffff;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .city-col__btn.active {
@@ -4702,6 +4706,15 @@ body.scroll_fixed {
     display: block;
     flex: 1;
     width: 100%;
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  #map_city.show {
+    position: static;
+    opacity: 1;
+    pointer-events: all;
   }
 
   .city-col::-webkit-scrollbar {
@@ -6932,3 +6945,10 @@ body.scroll_fixed {
   align-items: center;
 }
 
+.nothing {
+  display: none;
+}
+
+.nothing.active {
+  display: block;
+}
